# sweepjudge

./: .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  README_V3.md  docker-compose.yml  info.md  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  analyst_agent.py  base.py  debater_agent.py  fetcher_agent.py  metrician_agent.py  prefilter_agent.py  reader_agent.py  reviewer_agent.py  synthesiser_agent.py
app/core/: __init__.py  agent_directory.py  karma.py  models.py  tables.py  task_queue.py
app/orchestrator/: orchestrator.py  scheduler.py
app/utils/: compare_tools.py  metrics_extract.py  pdf_filter.py  pdf_tools.py  text_split.py
scripts/: check_tasks.py  cleanup_tasks.py  extract_results.py  manage_swarm.py  mark_completed.py  run_pipeline.py  seed_task.py  start_dev.py
