[project]
name = "karma-sandbox"
version = "0.1.0"
description = "Multimodal researcher with karma-based agent alignment"
requires-python = ">=3.11"

dependencies = [
  "openai",
  "PyPDF2",
  "aiohttp",
  "SQLAlchemy[asyncio]",
  "tiktoken",
  "python-dotenv",
  "psycopg[binary]",
  "psutil",
  "fastapi",
  "uvicorn[standard]",
  "typer",
  "httpx",
  "pdfplumber",
  "pymupdf",
  "asyncpg>=0.27.0",
  "pandas",
  "Pillow",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
# NOTE: We explicitly pin build backend and list packages below because
# setuptools' automatic discovery choked on the `data/` directory and raised:
#   error: Multiple top-level packages discovered in a flat-layout: ['app', 'data']
# By declaring `packages = ["app"]` we ensure only the actual code is shipped.
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv]
# optional uv-specific settings 